<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pommidori</string>

    <string name="start_new_session">Avvia una nuova Sessione</string>
    <string name="resume_session">Torna alla sessione</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="d_pause">Durata Pausa</string>
    <string name="prossime_scadenze">Prossime scadenze</string>
    <string name="prossime_sessioni">Prossime sessioni</string>
    <string name="sessione_personalizzata">Sessione Personalizzata</string>
    <string name="durata">Durata: </string>
    <string name="associa_attivita">Associa ad una attività:</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="nome_attivita">Inserire il nome dell\'attività</string>
    <string name="pomodoro_avvia">Avvia</string>
    <string name="default_activity">Nessuna attività</string>

    <!-- Calendar -->
    <string name="calendar">Calendario</string>
    <string name="week_view_button">Settimana</string>
    <string name="select_date_for_programmed_session">Seleziona un giorno</string>
    <string name="select_start_hour_for_programmed_session">Seleziona un orario d\'inizio</string>
    <string name="select_end_hour_for_programmed_session">Seleziona un orario di fine</string>
    <string name="programmed_session_created_successfully">Sessione creata!</string>
    <string name="programmed_session_creation_error">Errore creazione sessione</string>
    <string name="modify_session">Modifica sessione</string>
    <string name="delete_session">Cancella sessione</string>
    <string name="date_label">Giorno:</string>
    <string name="start_hour_label">Ora inizio:</string>
    <string name="end_hour_label">Ora fine:</string>
    <string name="modify_activity">Modifica attività</string>
    <string name="delete_activity">Cancella attività</string>
    <string name="deadline_label">Scadenza:</string>
    <string name="modify">Modifica</string>
    <string name="confirm">Conferma</string>
    <string name="cancel">Annulla</string>
    <string name="date_not_selected">--/--/--</string>
    <string name="hour_not_selected">--:--</string>
    <string name="select_start_hour_before_creating_reminder">Seleziona un\'ora d\'inizio</string>

    <!-- NewActivityFragment -->
    <string name="new_activity">Nuova attività</string>
    <string name="create_new_activity_title">Crea una nuova Attività</string>
    <string name="name_activity_label">Nome Attività:</string>
    <string name="hint_name_activity">es. Matematica</string>
    <string name="color_activity_label">Colore:</string>
    <string name="activity_without_deadline_label">Crea attività senza scadenza</string>
    <string name="activity_date_deadline">Data scadenza:</string>
    <string name="activity_hour_deadline">Ora scadenza:</string>
    <string name="reminder">Promemoria:</string>
    <string name="create_button">Crea</string>
    <string name="cancel_button">Annulla</string>

    <!-- NewSessionFragment -->
    <string name="select_activity_session">Attività:</string>
    <string name="select_day_session">Giorno:</string>
    <string name="select_start_hour_session">Ora Inizio:</string>
    <string name="select_end_hour_session">Ora di Fine:</string>


    <string name="new_session">Nuova sessione</string>
    <string name="create_new_session_title">Crea una nuova Sessione</string>
    <string name="vista_mensile">vista mensile</string>
    <string name="week_view_monday">LUN</string>
    <string name="week_view_tuesday">MAR</string>
    <string name="week_view_wednesday">MER</string>
    <string name="week_view_thursday">GIO</string>
    <string name="week_view_friday">VEN</string>
    <string name="week_view_saturday">SAB</string>
    <string name="week_view_sunday">DOM</string>

    <!-- Timer -->
    <string name="pomodoro_in_corso">Pomodoro in corso</string>
    <string name="pomodoro_disattivo">Pomodoro disattivo</string>
    <string name="pausa_in_corso">Pausa in corso</string>

    <!-- Impostazioni -->
    <string name="settings_pause_minute">minuti</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="accelerometer_sensor_settings_title">Controllo movimento smartphone</string>
    <string name="accelerometer_sensor_settings_description">Se usi lo smartphone distraendoti durante una sessione\n la valutazione calerà</string>
    <string name="accelerometer_sensor_switch_text">Attiva:</string>
    <string name="objective_daily_progress_setting_title">Obbiettivo progressi giornalieri</string>
    <string name="settings_daily_progress_hours">ore</string>

    <!-- Reports -->
    <string name="chart_tab_name">Chart</string>
    <string name="progress_tab_name">Progress</string>
    <string name="rating_tab_name">Rating</string>
    <string name="report">Report</string>
    <string name="objective_toast">Obbiettivo: </string>
    <string name="progress_toast">Progressi: </string>
    <string name="pie_chart_week_button">Settimana</string>
    <string name="pie_chart_month_button">Mese</string>
    <string name="pie_chart_year_button">Anno</string>


    <!-- Notifications -->
    <string name="timer_notification_title">Timer attivo</string>
    <string name="timer_notification_text">Testo notifica</string>
    <string name="timer_channel_name">Notifica timer attivo</string>
    <string name="timer_channel_description">Notifica di una sessione attiva</string>
    <string name="pausa_notification_title">Pausa in corso</string>
    <string name="pausa_notification_text">Testo pausa</string>
    <string name="reminder_channel_name">Promemoria sessione</string>
    <string name="reminder_channel_description">Promemoria di una sessione</string>
    <string name="reminder_text">Promemoria</string>

    <string-array name="daysOfWeekAbbreviated_En">
        <item name="Monday">Mon</item>
        <item name="Tuesday">Tue</item>
        <item name="Wednesday">Wed</item>
        <item name="Thursday">Thu</item>
        <item name="Friday">Fri</item>
        <item name="Saturday">Sat</item>
        <item name="Sunday">Sun</item>
    </string-array>


</resources>