<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/modify_session_dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="25dp"
    android:padding="25dp"
    tools:context=".fragments.ModifySessionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_session"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textSize="15sp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/modify_session_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="JAN 01 2021"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/start_hour_label"
            android:textSize="15sp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/modify_session_start_hour"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_end_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/end_hour_label"
            android:textSize="15sp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/modify_session_end_hour"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="15dp">

        <Button
            android:id="@+id/delete_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_session"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/confirm_modified_session"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginEnd="20dp"/>
        <Button
            android:id="@+id/cancel_modified_session"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>