<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modify_activity_dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_border_square"
    android:layout_margin="25dp"
    android:padding="25dp"
    tools:context=".fragments.ModifyActivityFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_activity"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nome Attività: "
            android:layout_marginEnd="25dp"
            android:textSize="15sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/modify_activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="es. Matematica"
                android:background="@color/white"
                android:layout_marginVertical="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textSize="15sp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/modify_activity_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="JAN 01 2021"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/deadline_label"
            android:textSize="15sp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/modify_activity_deadline"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="15dp">

        <Button
            android:id="@+id/delete_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_activity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/confirm_modified_activity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/modify"
            android:layout_marginEnd="20dp"/>
        <Button
            android:id="@+id/cancel_modified_activity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

    </LinearLayout>


</LinearLayout>